--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="bottom-section-profile">
-            <p class="medium-text-gray header-switch" data-timeframe="daily">Daily</p>
+            <p class="medium-text-gray header-switch active" data-timeframe="daily">Daily</p>
             <p class="medium-text-gray header-switch" data-timeframe="weekly">Weekly</p>
             <p class="medium-text-gray header-switch" data-timeframe="monthly">Monthly</p>
         </div>
@@ -46,8 +46,8 @@
             </div>
           </div>
           <div class="bottom-section-down">
-            <p class="large-text">32hrs</p>
-            <p class="small-text">Last Week - 36hrs</p>
+            <p class="large-text current-hours">--hrs</p>
+            <p class="small-text previous-hours">-- - --hrs</p>
           </div>
         </div>
       </section>
@@ -65,8 +65,8 @@
             </div>
           </div>
           <div class="bottom-section-down">
-            <p class="large-text">10hrs</p>
-            <p class="small-text">Last Week - 36hrs</p>
+            <p class="large-text current-hours">--hrs</p>
+            <p class="small-text previous-hours">-- - --hrs</p>
           </div>
         </div>
       </section>
@@ -84,8 +84,8 @@
             </div>
           </div>
           <div class="bottom-section-down">
-            <p class="large-text">32hrs</p>
-            <p class="small-text">Last Week - 36hrs</p>
+            <p class="large-text current-hours">--hrs</p>
+            <p class="small-text previous-hours">-- - --hrs</p>
           </div>
         </div>
       </section>
@@ -103,8 +103,8 @@
             </div>
           </div>
           <div class="bottom-section-down">
-            <p class="large-text">4hrs</p>
-            <p class="small-text">Last Week - 5hrs</p>
+            <p class="large-text current-hours">--hrs</p>
+            <p class="small-text previous-hours">-- - --hrs</p>
           </div>
         </div>
       </section>
@@ -122,8 +122,8 @@
             </div>
           </div>
           <div class="bottom-section-down">
-            <p class="large-text">5hrs</p>
-            <p class="small-text">Last Week - 10hrs</p>
+            <p class="large-text current-hours">--hrs</p>
+            <p class="small-text previous-hours">-- - --hrs</p>
           </div>
         </div>
       </section>
@@ -141,8 +141,8 @@
             </div>
           </div>
           <div class="bottom-section-down">
-            <p class="large-text">2hrs</p>
-            <p class="small-text">Last Week - 2hrs</p>
+            <p class="large-text current-hours">--hrs</p>
+            <p class="small-text previous-hours">-- - --hrs</p>
           </div>
         </div>
       </section>
